--- a/dis-card3.html
+++ b/dis-card3.html
@@ -57,6 +57,10 @@
 						<label for="kind42"></label>
 
 					</div>
+
+					<div id="kind4Button">
+						<p><button type="button" class="reset" onClick="resetCell('kind4', 3)">&#8635;</button></p>
+					</div>
 				</td>
 
 				<!--KIND3-->
@@ -83,6 +87,10 @@
 						&ensp;<input type="checkbox" id="kind32" name="kind32" class="smaller" onclick="visibility('kind3', 2)">
 						<label for="kind32"></label>
 
+					</div>
+
+					<div id="kind3Button">
+						<p><button type="button" class="reset" onClick="resetCell('kind3', 3)">&#8635;</button></p>
 					</div>
 				</td>
 
@@ -111,6 +119,10 @@
 						<label for="kind22"></label>
 
 					</div>
+
+					<div id="kind2Button">
+						<p><button type="button" class="reset" onClick="resetCell('kind2', 3)">&#8635;</button></p>
+					</div>
 				</td>
 
 				<!--FACE-->
@@ -133,6 +145,10 @@
 						&ensp;<input type="checkbox" id="face2" name="face2" class="smaller" onclick="visibility('face', 2)">
 						<label for="face2"></label>
 
+					</div>
+
+					<div id="faceButton">
+						<p><button type="button" class="reset" onClick="resetCell('face', 3)">&#8635;</button></p>
 					</div>
 				</td>
 
@@ -163,6 +179,10 @@
 						<label for="lt72"></label>
 
 					</div>
+
+					<div id="lt7Button">
+						<p><button type="button" class="reset" onClick="resetCell('lt7', 3)">&#8635;</button></p>
+					</div>
 				</td>
 
 				<!--GT6-->
@@ -190,6 +210,10 @@
 						&ensp;<input type="checkbox" id="gt62" name="gt62" class="smaller" onclick="visibility('gt6', 2)">
 						<label for="gt62"></label>
 
+					</div>
+
+					<div id="gt6Button">
+						<p><button type="button" class="reset" onClick="resetCell('gt6', 3)">&#8635;</button></p>
 					</div>
 				</td>
 
@@ -223,6 +247,10 @@
 						<label for="row32"></label>
 
 					</div>
+
+					<div id="row3Button">
+						<p><button type="button" class="reset" onClick="resetCell('row3', 3)">&#8635;</button></p>
+					</div>
 				</td>
 
 				<!--ROW4-->
@@ -249,6 +277,10 @@
 						&ensp;<input type="checkbox" id="row42" name="row42" class="smaller" onclick="visibility('row4', 2)">
 						<label for="row42"></label>
 
+					</div>
+
+					<div id="row4Button">
+						<p><button type="button" class="reset" onClick="resetCell('row4', 3)">&#8635;</button></p>
 					</div>
 				</td>
 
@@ -278,6 +310,10 @@
 						<label for="red2"></label>
 
 					</div>
+
+					<div id="redButton">
+						<p><button type="button" class="reset" onClick="resetCell('red', 3)">&#8635;</button></p>
+					</div>
 				</td>
 
 				<!--BLACK-->
@@ -302,6 +338,10 @@
 						&ensp;<input type="checkbox" id="black2" name="black2" class="smaller" onclick="visibility('black', 2)">
 						<label for="black2"></label>
 
+					</div>
+
+					<div id="blackButton">
+						<p><button type="button" class="reset" onClick="resetCell('black', 3)">&#8635;</button></p>
 					</div>
 				</td>
 
@@ -328,6 +368,10 @@
 						<label for="even2"></label>
 
 					</div>
+
+					<div id="evenButton">
+						<p><button type="button" class="reset" onClick="resetCell('even', 3)">&#8635;</button></p>
+					</div>
 				</td>
 
 				<!--ODD-->
@@ -350,6 +394,10 @@
 						&ensp;<input type="checkbox" id="odd2" name="odd2" class="smaller" onclick="visibility('odd', 2)">
 						<label for="odd2"></label>
 
+					</div>
+
+					<div id="oddButton">
+						<p><button type="button" class="reset" onClick="resetCell('odd', 3)">&#8635;</button></p>
 					</div>
 				</td>
 
@@ -382,36 +430,42 @@
 					<td id="player1cell" class="centerLeft"> <!--COLUMNS ARE ALIGNED DIFFERENTLY, HAVE DIFF CLASSES-->
 						<p><input type="text" id="player1" name="player1" size="8"></p> <!--TEXT BOX FOR NAME INPUT-->
 						<p>Points: <a id="points1">0</a></p> <!--STARTS AT 0, UPDATES LIVE-->
-						<p><button type="button" onClick="getPoints(1)">Add point</button></p> <!--PRESSING ADDS 1 POINT-->
+						<p><button type="button" onClick="getPoints(1, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(1, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 					<td id="player2cell" class="centerRight">
 						<p><input type="text" id="player2" name="player2" size="8"></p>
 						<p>Points: <a id="points2">0</a></p>
-						<p><button type="button" onClick="getPoints(2)">Add point</button></p>
+						<p><button type="button" onClick="getPoints(2, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(2, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 				</tr>
 				<tr>
 					<td id="player3cell" class="centerLeft">
 						<p><input type="text" id="player3" name="player3" size="8"></p>
 						<p>Points: <a id="points3">0</a></p>
-						<p><button type="button" onClick="getPoints(3)">Add point</button></p>
+						<p><button type="button" onClick="getPoints(3, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(3, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 					<td id="player4cell" class="centerRight">
 						<p><input type="text" id="player4" name="player4" size="8"></p>
 						<p>Points: <a id="points4">0</a></p>
-						<p><button type="button" onClick="getPoints(4)">Add point</button></p>
+						<p><button type="button" onClick="getPoints(4, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(4, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 				</tr>
 				<tr>
 					<td id="player5cell" class="centerLeft">
 						<p><input type="text" id="player5" name="player5" size="8"></p>
 						<p>Points: <a id="points5">0</a></p>
-						<p><button type="button" onClick="getPoints(5)">Add point</button></p>
+						<p><button type="button" onClick="getPoints(5, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(5, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 					<td id="player6cell" class="centerRight">
 						<p><input type="text" id="player6" name="player6" size="8"></p>
 						<p>Points: <a id="points6">0</a></p>
-						<p><button type="button" onClick="getPoints(6)">Add point</button></p>
+						<p><button type="button" onClick="getPoints(6, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(6, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 				</tr>
 			</table>
@@ -419,5 +473,11 @@
 		</div>
 
 		<script src="bin/dis-card.js"></script>
+		<script>
+			//HIDE RESET BUTTONS
+			resetButtons = ["kind4", "kind3", "kind2", "face", "lt7", "gt6", "row3", "row4", "red", "black", "even", "odd"];
+			for (var i = 0; i < resetButtons.length; i++)
+				document.getElementById(resetButtons[i] + "Button").style.display = "none";
+		</script>
 	</body>
 </html>
