New links to launcher
Each game now links back to the launcher instead of requiring the back button to switch games

--- a/dis-card1.html
+++ b/dis-card1.html
@@ -223,7 +223,7 @@
 			<br><br>
 			<!--TITLE (ALTERNATING COLORS)-->
 			<p><span class="title1">D</span><span class="title2">I</span><span class="title1">S</span><span class="title2">-</span><span class="title1">C</span><span class="title2">A</span><span class="title1">R</span><span class="title2">D</span>
-				<br><span class="title1">I</span></p>
+				<br><span class="title1"><a href="index.html">I</a></span></p>
 			<br><br>
 			<!--CENTER BUTTONS-->
 			<p><button type="button" class="rules" onclick="window.open('documents/DIS-CARD I Instructions.pdf')">How to play</button><br>
