--- a/dis-card2.html
+++ b/dis-card2.html
@@ -361,7 +361,7 @@
 		<center>
 			<!--TITLE (ALTERNATING COLORS)-->
 			<p><span class="title1">D</span><span class="title2">I</span><span class="title1">S</span><span class="title2">-</span><span class="title1">C</span><span class="title2">A</span><span class="title1">R</span><span class="title2">D</span>
-				<br><span class="title1">II</span></p>
+				<br><span class="title1"><a href="index.html">II</a></span></p>
 			<!--LOGO (CARDS)-->
 			<p><img src="graphics/cards_array.png" width="15%" alt="DIS-CARD Logo"></p>
 			<!--CENTER BUTTONS-->
