First requested tweaks to last update
Switched arrows to plus and minus
Reset button now only unchecks last box
Commented all reset buttons
Added groundwork for reset buttons to be at bottom of boxes, doesn't work yet

--- a/dis-card3.html
+++ b/dis-card3.html
@@ -58,6 +58,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="kind4Button">
 						<p><button type="button" class="reset" onClick="resetCell('kind4', 3)">&#8635;</button></p>
 					</div>
@@ -89,6 +90,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="kind3Button">
 						<p><button type="button" class="reset" onClick="resetCell('kind3', 3)">&#8635;</button></p>
 					</div>
@@ -120,6 +122,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="kind2Button">
 						<p><button type="button" class="reset" onClick="resetCell('kind2', 3)">&#8635;</button></p>
 					</div>
@@ -147,6 +150,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="faceButton">
 						<p><button type="button" class="reset" onClick="resetCell('face', 3)">&#8635;</button></p>
 					</div>
@@ -180,6 +184,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="lt7Button">
 						<p><button type="button" class="reset" onClick="resetCell('lt7', 3)">&#8635;</button></p>
 					</div>
@@ -212,6 +217,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="gt6Button">
 						<p><button type="button" class="reset" onClick="resetCell('gt6', 3)">&#8635;</button></p>
 					</div>
@@ -248,6 +254,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="row3Button">
 						<p><button type="button" class="reset" onClick="resetCell('row3', 3)">&#8635;</button></p>
 					</div>
@@ -279,6 +286,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="row4Button">
 						<p><button type="button" class="reset" onClick="resetCell('row4', 3)">&#8635;</button></p>
 					</div>
@@ -311,6 +319,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="redButton">
 						<p><button type="button" class="reset" onClick="resetCell('red', 3)">&#8635;</button></p>
 					</div>
@@ -340,6 +349,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="blackButton">
 						<p><button type="button" class="reset" onClick="resetCell('black', 3)">&#8635;</button></p>
 					</div>
@@ -369,6 +379,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="evenButton">
 						<p><button type="button" class="reset" onClick="resetCell('even', 3)">&#8635;</button></p>
 					</div>
@@ -396,6 +407,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="oddButton">
 						<p><button type="button" class="reset" onClick="resetCell('odd', 3)">&#8635;</button></p>
 					</div>
@@ -430,42 +442,42 @@
 					<td id="player1cell" class="centerLeft"> <!--COLUMNS ARE ALIGNED DIFFERENTLY, HAVE DIFF CLASSES-->
 						<p><input type="text" id="player1" name="player1" size="8"></p> <!--TEXT BOX FOR NAME INPUT-->
 						<p>Points: <a id="points1">0</a></p> <!--STARTS AT 0, UPDATES LIVE-->
-						<p><button type="button" onClick="getPoints(1, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
-							<button type="button" onClick="getPoints(1, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
+						<p><button type="button" onClick="getPoints(1, true)">&plus;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(1, false)">&ndash;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 					<td id="player2cell" class="centerRight">
 						<p><input type="text" id="player2" name="player2" size="8"></p>
 						<p>Points: <a id="points2">0</a></p>
-						<p><button type="button" onClick="getPoints(2, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
-							<button type="button" onClick="getPoints(2, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
+						<p><button type="button" onClick="getPoints(2, true)">&plus;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(2, false)">&ndash;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 				</tr>
 				<tr>
 					<td id="player3cell" class="centerLeft">
 						<p><input type="text" id="player3" name="player3" size="8"></p>
 						<p>Points: <a id="points3">0</a></p>
-						<p><button type="button" onClick="getPoints(3, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
-							<button type="button" onClick="getPoints(3, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
+						<p><button type="button" onClick="getPoints(3, true)">&plus;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(3, false)">&ndash;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 					<td id="player4cell" class="centerRight">
 						<p><input type="text" id="player4" name="player4" size="8"></p>
 						<p>Points: <a id="points4">0</a></p>
-						<p><button type="button" onClick="getPoints(4, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
-							<button type="button" onClick="getPoints(4, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
+						<p><button type="button" onClick="getPoints(4, true)">&plus;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(4, false)">&ndash;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 				</tr>
 				<tr>
 					<td id="player5cell" class="centerLeft">
 						<p><input type="text" id="player5" name="player5" size="8"></p>
 						<p>Points: <a id="points5">0</a></p>
-						<p><button type="button" onClick="getPoints(5, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
-							<button type="button" onClick="getPoints(5, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
+						<p><button type="button" onClick="getPoints(5, true)">&plus;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(5, false)">&ndash;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 					<td id="player6cell" class="centerRight">
 						<p><input type="text" id="player6" name="player6" size="8"></p>
 						<p>Points: <a id="points6">0</a></p>
-						<p><button type="button" onClick="getPoints(6, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
-							<button type="button" onClick="getPoints(6, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
+						<p><button type="button" onClick="getPoints(6, true)">&plus;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(6, false)">&ndash;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 				</tr>
 			</table>
