--- a/dis-card1.html
+++ b/dis-card1.html
@@ -49,6 +49,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="heartButton">
 						<p><button type="button" class="reset" onClick="resetCell('heart', 1)">&#8635;</button></p>
 					</div>
@@ -80,6 +81,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="diamondButton">
 						<p><button type="button" class="reset" onClick="resetCell('diamond', 1)">&#8635;</button></p>
 					</div>
@@ -117,6 +119,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="numberButton">
 						<p><button type="button" class="reset" onClick="resetCell('number', 1)">&#8635;</button></p>
 					</div>
@@ -152,6 +155,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="clubButton">
 						<p><button type="button" class="reset" onClick="resetCell('club', 1)">&#8635;</button></p>
 					</div>
@@ -186,6 +190,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="faceButton">
 						<p><button type="button" class="reset" onClick="resetCell('face', 1)">&#8635;</button></p>
 					</div>
@@ -210,6 +215,7 @@
 
 					</div>
 
+					<!--RESET BUTTON-->
 					<div id="spadeButton">
 						<p><button type="button" class="reset" onClick="resetCell('spade', 1)">&#8635;</button></p>
 					</div>
@@ -243,42 +249,42 @@
 					<td id="player1cell" class="centerLeft"> <!--COLUMNS ARE ALIGNED DIFFERENTLY, HAVE DIFF CLASSES-->
 						<p><input type="text" id="player1" name="player1" size="8"></p> <!--TEXT BOX FOR NAME INPUT-->
 						<p>Points: <a id="points1">0</a></p> <!--STARTS AT 0, UPDATES LIVE-->
-						<p><button type="button" onClick="getPoints(1, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
-							<button type="button" onClick="getPoints(1, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
+						<p><button type="button" onClick="getPoints(1, true)">&plus;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(1, false)">&ndash;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 					<td id="player2cell" class="centerRight">
 						<p><input type="text" id="player2" name="player2" size="8"></p>
 						<p>Points: <a id="points2">0</a></p>
-						<p><button type="button" onClick="getPoints(2, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
-							<button type="button" onClick="getPoints(2, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
+						<p><button type="button" onClick="getPoints(2, true)">&plus;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(2, false)">&ndash;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 				</tr>
 				<tr>
 					<td id="player3cell" class="centerLeft">
 						<p><input type="text" id="player3" name="player3" size="8"></p>
 						<p>Points: <a id="points3">0</a></p>
-						<p><button type="button" onClick="getPoints(3, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
-							<button type="button" onClick="getPoints(3, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
+						<p><button type="button" onClick="getPoints(3, true)">&plus;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(3, false)">&ndash;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 					<td id="player4cell" class="centerRight">
 						<p><input type="text" id="player4" name="player4" size="8"></p>
 						<p>Points: <a id="points4">0</a></p>
-						<p><button type="button" onClick="getPoints(4, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
-							<button type="button" onClick="getPoints(4, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
+						<p><button type="button" onClick="getPoints(4, true)">&plus;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(4, false)">&ndash;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 				</tr>
 				<tr>
 					<td id="player5cell" class="centerLeft">
 						<p><input type="text" id="player5" name="player5" size="8"></p>
 						<p>Points: <a id="points5">0</a></p>
-						<p><button type="button" onClick="getPoints(5, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
-							<button type="button" onClick="getPoints(5, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
+						<p><button type="button" onClick="getPoints(5, true)">&plus;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(5, false)">&ndash;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 					<td id="player6cell" class="centerRight">
 						<p><input type="text" id="player6" name="player6" size="8"></p>
 						<p>Points: <a id="points6">0</a></p>
-						<p><button type="button" onClick="getPoints(6, true)">&#8593;</button> <!--PRESSING ADDS 1 POINT-->
-							<button type="button" onClick="getPoints(6, false)">&#8595;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
+						<p><button type="button" onClick="getPoints(6, true)">&plus;</button> <!--PRESSING ADDS 1 POINT-->
+							<button type="button" onClick="getPoints(6, false)">&ndash;</button></p> <!--PRESSING SUBTRACTS 1 POINT-->
 					</td>
 				</tr>
 			</table>
